# final-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 10_47_11_09_2025_add_meetings_503e619925fa.py  12_24_04_09_2025_create_company_tables_7e4771b7fed5.py  13_05_05_09_2025_remove_news_unique_constraint_140b0fc09f14.py  13_36_05_09_2025_remove_news_auto_datetime_c0b0cc3c14ff.py  14_31_03_09_2025_create_user_tables_b6d1d0945b8a.py  15_20_11_09_2025_rename_organizer_id_author_id_in_meeting_3fbcdcce2c8e.py  17_20_09_09_2025_create_task_and_task_comment_b6a14d852177.py  17_47_09_09_2025_add_start_at_and_due_at_to_task_fff24644d3e9.py  18_01_04_09_2025_init_5e9749f7e733.py  19_26_11_09_2025_db_init_d76305e71230.py  19_31_12_09_2025_db_init_c49befd06844.py  20_41_12_09_2025_change_avg_to_numeric_4_2_with_computed_b36a98aabcad.py  21_56_12_09_2025_add_check_constraints_to_rating_77e61666f7a2.py  22_26_09_09_2025_make_start_at_and_due_at_not_null_in__8f8cc3c59268.py  22_37_08_09_2025_update_invite_02a8437c1432.py
app/: main.py
app/admin/: __init__.py  auth.py  config.py
app/api/: dependencies.py  routers.py  validators.py
app/core/: admin.py  base.py  config.py  constants.py  init_db.py  mail.py  scheduler.py  user.py
app/crud/: base.py  calendar.py  company.py  meeting.py  motivation.py  task.py
app/models/: company.py  meeting.py  motivation.py  task.py  user.py
app/schemas/: calendar.py  company.py  meeting.py  motivation.py  task.py  user.py
nginx/: nginx.conf
(+15 files in other folders)
